-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
None
-
server and client: lustre-master build #2702
-
3
-
16349
Cannot verify if the routing buffer has been set or not, the same happens on small and large buffers as well.
[root@onyx-27 proc]# more /sys/module/lnet/parameters/forwarding
enabled
[root@onyx-27 proc]# lnetctl set tiny_buffers 2048
[root@onyx-27 proc]# lnetctl routing show
routing:
- cpt[0]:
tiny:
npages: 0
nbuffers: 512
credits: 512
mincredits: 512
small:
npages: 1
nbuffers: 4096
credits: 4096
mincredits: 4096
large:
npages: 256
nbuffers: 256
credits: 256
mincredits: 256
- enable: 1