LU-5828 lnet: showing buffers problem with mulitple CPTs

Overloading an iterator variable in lustre_lnet_show_routing()
caused only the first CPT information to be displayed.

Signed-off-by: Amir Shehata <amir.shehata@intel.com>
Change-Id: Ic75dccc0c3537b8272d1c2687a759fbcc23052e8
Reviewed-on: http://review.whamcloud.com/12593
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Doug Oucharek <doug.s.oucharek@intel.com>
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>